--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <!-- Наши стили -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -133,4 +133,5 @@
     <script src="config.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
