--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- Наши стили -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -135,3 +135,4 @@
 </body>
 
 </html>
+
