--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <option value="none">Не важно</option>
         <option value="schools">Школы</option>
         <option value="kindergartens">Детские сады</option>
+        <option value="both">Школы и детские сады</option>
     </select>
 </div>
 
