--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="control-panel">
         <!-- Кнопки управления слоями -->
         <div class="layer-controls">
-            <button id="toggle-schools" class="layer-btn active" data-layer="schools">
+            <button id="toggle-schools" class="layer-btn inactive" data-layer="schools">
                 <span>🏫 Школы</span>
             </button>
-            <button id="toggle-kindergartens" class="layer-btn active" data-layer="kindergartens">
+            <button id="toggle-kindergartens" class="layer-btn inactive" data-layer="kindergartens">
                 <span>🏠 Детсады</span>
             </button>
             <!-- Кнопка для цен добавится динамически -->
@@ -136,4 +136,5 @@
 </body>
 
 </html>
+
 
