--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
     
     <!-- Наши скрипты -->
     <script src="config.js"></script>
+    <script src="ngw-api.js"></script>
     <script src="app.js"></script>
 </body>
 
 </html>
+
 
 
