--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             <span>☰ Фильтры</span>
         </button>
     </div>
+
+    <div id="loading-indicator" class="loading-indicator" style="display: none;">
+        <div class="loading-spinner"></div>
+        <span>Загрузка данных...</span>
+    </div>
     
     <!-- Боковое меню -->
     <div id="side-menu" class="side-menu">
@@ -137,6 +142,7 @@
 </body>
 
 </html>
+
 
 
 
